==> chettrick/discobsd/sys/stm32/stm32469i_discovery_sd.c <==
#include "stm32469i_discovery_sd.h"

uint8_t
BSP_SD_Init(void)
{
  uint8_t sd_state = MSD_OK;

  /* PLLSAI is dedicated to LCD periph. Do not use it to get 48MHz. */

  /* uSD device interface configuration */
  uSdHandle.Instance = SDIO;

  uSdHandle.Init.ClockEdge           = SDIO_CLOCK_EDGE_RISING;
  uSdHandle.Init.ClockBypass         = SDIO_CLOCK_BYPASS_DISABLE;
  uSdHandle.Init.ClockPowerSave      = SDIO_CLOCK_POWER_SAVE_DISABLE;
  uSdHandle.Init.BusWide             = SDIO_BUS_WIDE_1B;
  uSdHandle.Init.HardwareFlowControl = SDIO_HARDWARE_FLOW_CONTROL_ENABLE;
  uSdHandle.Init.ClockDiv            = SDIO_TRANSFER_CLK_DIV;

  /* Msp SD Detect pin initialization */
  BSP_SD_Detect_MspInit(&uSdHandle, NULL);
  if (BSP_SD_IsDetected() != SD_PRESENT) {   /* Check if SD card is present */
    return MSD_ERROR_SD_NOT_PRESENT;
  }

  /* Msp SD initialization */
  BSP_SD_MspInit(&uSdHandle, NULL);

  /* HAL SD initialization */
  if (HAL_SD_Init(&uSdHandle) != HAL_OK) {
    sd_state = MSD_ERROR;
  }

  /* Configure SD Bus width */
  if (sd_state == MSD_OK) {
    /* Enable wide operation */
    if (HAL_SD_ConfigWideBusOperation(&uSdHandle, SDIO_BUS_WIDE_4B) != HAL_OK) {
      sd_state = MSD_ERROR;
    } else {
      sd_state = MSD_OK;
    }
  }
  return  sd_state;
}

uint8_t
BSP_SD_GetCardInfo(BSP_SD_CardInfo *pCardInfo)
{
  uint8_t status;

  /* Get SD card Information */
  status = HAL_SD_GetCardInfo(&uSdHandle, pCardInfo);

  return status;
}

uint8_t
BSP_SD_IsDetected(void)
{
  __IO uint8_t  status = SD_PRESENT;

  /* Check SD card detect pin */
  if (LL_GPIO_IsInputPinSet(SD_DETECT_GPIO_PORT, SD_DETECT_PIN)) {
    status = SD_NOT_PRESENT;
  }

  return status;
}

__weak void
BSP_SD_MspInit(SD_HandleTypeDef *hsd, void *Params)
{
#define NUM_C_PINS 5

  uint32_t port_c_pins[NUM_C_PINS] = { LL_GPIO_PIN_8, LL_GPIO_PIN_9, LL_GPIO_PIN_10,
                                       LL_GPIO_PIN_11, LL_GPIO_PIN_12 };
  uint32_t port_d_pin = LL_GPIO_PIN_2;
  uint32_t i;

  /* Enable SDIO clock */
  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_SDIO);

  /* Enable GPIO clocks */
  LL_GPIO_EnableClock(GPIOC);
  LL_GPIO_EnableClock(GPIOD);

  /* GPIOC configuration */
  for (i = 0; i < NUM_C_PINS; ++i) {
    LL_GPIO_SetPinMode(GPIOC, port_c_pins[i], LL_GPIO_MODE_ALTERNATE);
    LL_GPIO_SetPinSpeed(GPIOC, port_c_pins[i], LL_GPIO_SPEED_FREQ_VERY_HIGH);
    LL_GPIO_SetPinPull(GPIOC, port_c_pins[i], LL_GPIO_PULL_UP);
    LL_GPIO_SetAFPin(GPIOC, port_c_pins[i], LL_GPIO_AF_12);
    LL_GPIO_SetPinOutputType(GPIOC, port_c_pins[i], LL_GPIO_OUTPUT_PUSHPULL);
  }

  /* GPIOD configuration */
  LL_GPIO_SetPinMode(GPIOD, port_d_pin, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetPinSpeed(GPIOD, port_d_pin, LL_GPIO_SPEED_FREQ_VERY_HIGH);
  LL_GPIO_SetPinPull(GPIOD, port_d_pin, LL_GPIO_PULL_UP);
  LL_GPIO_SetAFPin(GPIOD, port_d_pin, LL_GPIO_AF_12);
  LL_GPIO_SetPinOutputType(GPIOD, port_d_pin, LL_GPIO_OUTPUT_PUSHPULL);

  /* NVIC configuration for SDIO interrupts */
  arm_intr_set_priority(SDIO_IRQn, IPL_BIO);
  arm_intr_enable_irq(SDIO_IRQn);
}

__weak void
BSP_SD_Detect_MspInit(SD_HandleTypeDef *hsd, void *Params)
{
  /* Enable GPIO clock */
  LL_GPIO_EnableClock(SD_DETECT_GPIO_PORT);

  /* GPIO configuration in input for uSD_Detect signal */
  LL_GPIO_SetPinMode(SD_DETECT_GPIO_PORT, SD_DETECT_PIN, LL_GPIO_MODE_INPUT);
  LL_GPIO_SetPinSpeed(SD_DETECT_GPIO_PORT, SD_DETECT_PIN, LL_GPIO_SPEED_FREQ_VERY_HIGH);
  LL_GPIO_SetPinPull(SD_DETECT_GPIO_PORT, SD_DETECT_PIN, LL_GPIO_PULL_UP);
  LL_GPIO_SetPinOutputType(SD_DETECT_GPIO_PORT, SD_DETECT_PIN, LL_GPIO_OUTPUT_PUSHPULL);
}

__weak void
BSP_SD_MspDeInit(SD_HandleTypeDef *hsd, void *Params)
{
  /* Disable NVIC for SDIO interrupts */
  arm_intr_disable_irq(SDIO_IRQn);

  /* Disable SDIO clock */
  LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_SDIO);
}
